feat: update links to social media

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                         <li>świat mikrokontrolerów i sieci: <span class="special">Arduino, RaspberryPi, CCNA</span></li>
                     </ul>    
                     </p>
-                <p class="card__description card__description--footer">W sieci: <a href="" class="social"><i
-                            class="fab fa-facebook-square"></i></a> <a href="" class="social"><i
-                            class="fab fa-github-square"></i></a> <a href="" class="social"><i
+                <p class="card__description card__description--footer">W sieci: <a href="https://www.facebook.com/adrian.zinko.9/" class="social"><i
+                            class="fab fa-facebook-square"></i></a> <a href="https://github.com/AdrianGHub" class="social"><i
+                            class="fab fa-github-square"></i></a> <a href="https://www.instagram.com/_drianko/" class="social"><i
                             class="fab fa-instagram-square"></i></a></p>
             </div>
         </article>
